# whamm

./: .gitignore  Cargo.toml  justfile
.devcontainer/: devcontainer.json  install_tooling.sh
scripts/: 06_build.sh
src/: main.rs
src/common/: error.rs  instr.rs
src/emitter/: memory_allocator.rs  module_emitter.rs  utils.rs
src/emitter/rewriting/: visiting_emitter.rs
src/emitter/rewriting/rules/: mod.rs
src/generator/: ast.rs  metadata_collector.rs  mod.rs
src/generator/folding/: expr.rs
src/generator/rewriting/: init_generator.rs  instr_generator.rs
src/generator/wei/: mod.rs
src/lang_features/: report_vars.rs
src/lang_features/alloc_vars/: rewriting.rs  wei.rs
src/lang_features/libraries/: actions.rs
src/lang_features/libraries/core/: mod.rs
src/lang_features/libraries/core/io/: io_adapter.rs  mod.rs
src/lang_features/libraries/core/maps/: map_adapter.rs  mod.rs
src/lang_features/libraries/core/utils/: mod.rs
src/lang_features/libraries/linking/: import_lib.rs
src/lang_features/type_utils/: strings.rs
src/parser/: provider_handler.rs  types.rs  whamm_parser.rs
src/parser/tests/: numerics.rs
src/verifier/: builder_visitor.rs  types.rs  verifier.rs
src/wast/: test_harness.rs
tests/test_instrumentation/: core.rs  helper.rs
whamm_core/src/io/: print.rs
whamm_core/src/maps/: mod.rs
whamm_core/src/utils/: mod.rs
