[workspace]
members = ["whamm_core", "wasmtime-runner", "wasm_playground/control_flow"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "=1.0.102"
glob = "=0.3.3"
itertools = "=0.14.0"
#wirm = { path = "../wirm" }
wirm = "=3.0.1"

# For Tests
once_cell = "=1.21.4"
wasm-bindgen = "=0.2.114"

# For the wasmtime embedding for @static
wasmtime = "43.0.0"
wasi-common = "43.0.0"
wasmtime-wasi = "43.0.0"

# Logging
env_logger = "=0.11.9"
log = "=0.4.29"
termcolor = "=1.4.1"

# Pest
pest = "=2.8.6"
pest_derive = "=2.8.6"

# Provider YAML configs
serde = { version = "=1.0.228", features = ["derive"] }
serde_yml = "=0.0.12"

# CLI
clap = { version = "=4.6.0", features = ["derive", "cargo", "env"] }

wat = "=1.245.1"

[package]
name = "whamm"
version.workspace = true
edition.workspace = true

[[bin]]
doc = false
name = "whamm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
#wirm = { path = "../wirm" }
wirm = { workspace = true }

# For the wasmtime embedding for @static
wasmtime = { workspace = true }
wasi-common = { workspace = true }

# Logging
env_logger = { workspace = true }
log = { workspace = true }
termcolor = { workspace = true }

# Pest
pest = { workspace = true }
pest_derive = { workspace = true }

# Provider YAML configs
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "cargo", "env"] }

wat = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.33"
glob = { workspace = true }
